--- a/calendar/.eslintrc
+++ b/calendar/.eslintrc
@@ -13,6 +13,7 @@
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "curly": ["error", "multi-line"],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
     "valid-jsdoc": ["error", {
@@ -27,6 +28,11 @@
             "MethodDefinition": true,
             "ClassDeclaration": true
         }
+    }],
+    "react/jsx-no-bind": ["error", {
+      "ignoreRefs": true,
+      "allowArrowFunctions": true,
+      "allowBind": true
     }]
   }
 }
